--- a/lib/adoptoposs_web/templates/email/interest_received.html.eex
+++ b/lib/adoptoposs_web/templates/email/interest_received.html.eex
@@ -1,7 +1,7 @@
 <mj-section>
   <mj-column>
     <mj-text css-class="text">
-      Hi <%= @interest.project.user.name %>
+      Hi <%= @interest.project.user.name %>,
     </mj-text>
 
     <mj-text css-class="text">
