--- a/lib/adoptoposs_web/templates/shared/form.html.leex
+++ b/lib/adoptoposs_web/templates/shared/form.html.leex
@@ -1,4 +1,4 @@
-<%= f = form_for @changeset, "#", [id: "form-#{@id}", phx_submit: @submit_event, class: "flex flex-col w-full #{assigns[:class]}", phx_target: @phx_target] %>
+<%= f = form_for @changeset, "#", [id: @id, phx_submit: @submit_event, class: "flex flex-col w-full #{assigns[:class]}", phx_target: @phx_target] %>
   <label class="text-gray-700">
     <%= @headline %>
   </label>
