Update phoenix to v1.5.1
See https://github.com/phoenixframework/phoenix/blob/v1.5/CHANGELOG.md

--- a/lib/adoptoposs_web/templates/layout/email.html.eex
+++ b/lib/adoptoposs_web/templates/layout/email.html.eex
@@ -61,7 +61,7 @@
     </mj-section>
 
     <!-- content -->
-    <%= render @view_module, @view_template, assigns %>
+    <%= @inner_content %>
 
     <!-- content footer -->
     <mj-section>
