--- a/lib/adoptoposs_web/templates/shared/language_tag.html.eex
+++ b/lib/adoptoposs_web/templates/shared/language_tag.html.eex
@@ -1,8 +1,11 @@
-<div class="flex flex-row flex-no-wrap min-width-0 items-center font-semibold cursor-default <%= assigns[:class] %>">
+<div class="flex flex-row flex-no-wrap min-width-0 items-center font-semibold cursor-default <%= assigns[:class] %>" title="<%= if assigns[:title], do: assigns[:title] %>">
   <div class="w-3 h-3 rounded rounded-full bg-gray-500"
     style="background-color: <%= @color %>;">
   </div>
   <div class="w-max-content ml-2">
     <%= @name %>
+    <%= if assigns[:removeable] do %>
+      <span class="ml-1">&times;</span>
+    <% end %>
   </div>
 </div>
