--- a/lib/adoptoposs_web/templates/layout/app.html.eex
+++ b/lib/adoptoposs_web/templates/layout/app.html.eex
@@ -1,6 +1,6 @@
 <section>
   <%= if get_flash(@conn, :error) do %>
-    <p class="bg-red-400 text-white text-center font-medium p-4" role="alert"><%= get_flash(@conn, :error) %></p>
+    <p class="text-red-500 text-center font-font-semibold p-4 rounded border border-red-400" role="alert"><%= get_flash(@conn, :error) %></p>
   <% end %>
 </section>
 
