--- a/lib/adoptoposs_web/templates/settings/index.html.leex
+++ b/lib/adoptoposs_web/templates/settings/index.html.leex
@@ -1,90 +1,131 @@
 <section>
   <h1>Settings</h1>
 
-  <div class="md:grid md:grid-flow-col md:grid-cols-2 md:gap-4">
-    <div class="flex flex-col flex-wrap">
-      <h2>Languages You Follow</h2>
+  <h2>Your Favorite Languages</h2>
 
-      <div id="tag-subscriptions" class="flex flex-row flex-wrap mt-4 md:mt-6">
-        <%= if Enum.empty?(@tag_subscriptions) do %>
-          <p class="text-gray-600 py-2">
-            You don’t follow any languages yet.
-          </p>
-        <% end %>
+  <div class="mt-4 p-4 md:p-6 rounded bg-white border border-gray-300">
+    <div class="md:grid md:grid-flow-col md:grid-cols-2 md:gap-8">
+      <div class="flex flex-col flex-wrap">
 
-        <%= for tag_subscription <- @tag_subscriptions do %>
-          <% tag = tag_subscription.tag %>
-          <div id="tag-<%= tag.id %>" class="flex flex-row items-center bg-white text-pink-900 border border-gray-400 font-semibold mr-2 mb-2 rounded hover:bg-red-500 hover:text-white hover:border-white">
-            <div class="w-4 h-4 rounded rounded-full ml-3" style="background-color: <%= tag.color %>;"></div>
-            <div class="pl-3" title="<%= tag.name %>">
-              <span class=""><%= tag.name %></span>
+        <p class="">
+          🛈 Programming languages you add here will appear as quick filters on the
+          <%= live_redirect "explore projects page", to: Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.ExploreLive) %>.
+          You can also receive email notifications for new projects in these languages.
+        </p>
 
-              <form phx-submit="unfollow_tag"
-                title="Unfollow <%= tag.name %>"
-                class="inline-block cursor-pointer">
-                <input type="hidden" name="tag_subscription_id" value="<%= tag_subscription.id %>" phx-value_tag_subscription_id="<%= tag_subscription.id %>">
-                <%= submit class: "plain p-2 pr-4" do %>&times;<% end %>
-              </form>
-            </div>
+        <%= if Enum.any?(@tag_subscriptions) do %>
+          <div id="tag-subscriptions" class="flex flex-row flex-wrap mt-2">
+            <%= for tag_subscription <- @tag_subscriptions do %>
+              <% tag = tag_subscription.tag %>
+              <div id="tag-<%= tag.id %>" class="flex flex-row items-center bg-white text-pink-900 border border-gray-400 font-semibold mr-2 mb-2 rounded hover:bg-red-500 hover:text-white hover:border-white">
+                <div class="w-3 h-3 rounded rounded-full ml-3" style="background-color: <%= tag.color %>;"></div>
+                <div class="pl-2" title="<%= tag.name %>">
+                  <span class=""><%= tag.name %></span>
+
+                  <form phx-submit="unfollow_tag"
+                    title="Unfollow <%= tag.name %>"
+                    class="inline-block cursor-pointer">
+                    <input type="hidden" name="tag_subscription_id" value="<%= tag_subscription.id %>" phx-value_tag_subscription_id="<%= tag_subscription.id %>">
+                    <%= submit class: "plain p-1 pr-3" do %>&times;<% end %>
+                  </form>
+                </div>
+              </div>
+            <% end %>
+          </div>
+        <% else %>
+          <div class="rounded mt-2 p-4 bg-gray-200">
+            <p class="mb-0">
+              You did not add any favorite languages yet.
+            </p>
+
+            <%= if Enum.any?(@suggested_tags) do %>
+              <div>
+                <p class="mt-2 mb-2">
+                  However, we found that you might be interested in
+                </p>
+
+                <div class="flex flex-row flex-wrap mb-2">
+                  <%= for tag <- @suggested_tags do %>
+                    <%= render AdoptopossWeb.SharedView, "language_tag.html",
+                      name: tag.name,
+                      color: tag.color,
+                      class: "px-1 py-1 mr-2 text-base" %>
+                  <% end %>
+                </div>
+
+                <%= submit "Add these languages",
+                  class: "button-link",
+                  phx_click: "follow_suggested_tags",
+                  phx_disable_with: "…" %>
+              </div>
+            <% end %>
           </div>
         <% end %>
       </div>
-    </div>
 
-    <div class="flex flex-col w-full mt-2 md:mt-0">
-      <h2>Add a Language</h2>
+      <div class="flex flex-col w-full mt-4 md:mt-0">
+        <h3>Add a Language</h3>
 
-      <form class="flex flex-row flex-wrap mt-4 md:mt-6" phx-submit="search_tags" phx-change="search_tags">
-        <input type="search"
-          class="flex-grow border border-red-500 rounded-full h-16 px-8 text-red-600"
-          id="search"
-          name="q"
-          value="<%= @query %>"
-          autocomplete="off"
-          autofocus
-          placeholder="Search for programming languages..."
-          phx-debounce="500" />
-      </form>
+        <div class="flex items-center mt-4">
+          <form class="inline-flex w-full" phx-submit="search_tags" phx-change="search_tags">
+            <input type="search"
+              class="flex-grow border border-red-500 rounded-full h-12 px-6 text-red-600"
+              id="search"
+              name="q"
+              value="<%= @query %>"
+              autocomplete="off"
+              autofocus
+              placeholder="Search for programming languages..."
+              phx-debounce="200" />
+          </form>
 
-      <div id="tags-search" class="flex flex-row flex-wrap mt-4 md:mt-6" phx-update="<%= @update %>">
-        <%= if @query && @page == 1 && Enum.empty?(@tag_results) do %>
-          <p class="text-pink-900">
-            No language found for <span class="text-red-500">"<%= @query %>"</span> :(
-          </p>
-        <% else %>
-          <%= for result <- @tag_results do %>
-            <%= if result in Enum.map(@tag_subscriptions, &(&1.tag)) do %>
-              <div id="tag-result-<%= result.id %>" class="flex flex-row flex-wrap items-center bg-gray-200 text-gray-500 border border-gray-400 font-semibold mr-2 mb-2 rounded cursor-default py-2"  title="<%= result.name %>">
-                <div class="w-4 h-4 rounded rounded-full ml-3 bg-gray-500"></div>
+          <%= unless @query in [nil, ""] do %>
+            <button class="button-link inline indented-sm w-5 h-5" phx-click="clear_search">
+              <span class="text-xl">&times;</span>
+            </button>
+          <% end %>
+        </div>
 
-                <div class="pl-3"><%= result.name %></div>
+        <div id="tags-search" class="flex flex-row flex-wrap mt-4 md:mt-6">
+          <%= if @query && Enum.empty?(@tag_results) do %>
+            <p class="text-pink-900">
+              No language found for <span class="text-red-500">"<%= @query %>"</span> :(
+            </p>
+          <% else %>
+            <%= for result <- @tag_results do %>
+              <%= if result in Enum.map(@tag_subscriptions, &(&1.tag)) do %>
+                <div id="tag-result-<%= result.id %>" class="flex flex-row flex-wrap items-center bg-gray-200 text-gray-500 border border-gray-400 font-semibold mr-2 mb-2 rounded cursor-default py-1"  title="<%= result.name %>">
+                  <div class="w-3 h-3 rounded rounded-full ml-3 bg-gray-500"></div>
 
-                <div class="inline-block pl-3 pr-4">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="h-3 w-3 fill-current">
-                    <path d="M0 11l2-2 5 5L18 3l2 2L7 18z"/>
-                  </svg>
+                  <div class="ml-2"><%= result.name %></div>
+
+                  <div class="inline-block pl-2 pr-3">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="h-3 w-3 fill-current">
+                      <path d="M0 11l2-2 5 5L18 3l2 2L7 18z"/>
+                    </svg>
+                  </div>
                 </div>
-              </div>
-            <% else %>
-              <div class="flex flex-row items-center bg-white text-pink-900 border border-gray-400 font-semibold mr-2 mb-2 rounded hover:bg-red-500 hover:text-white hover:border-white cursor-pointer"
-                title="Follow <%= result.name %>">
-                <form phx-submit="follow_tag"
-                  title="Follow <%= result.name %>"
-                  class="flex flex-row flex-wrap items-center cursor-pointer">
-                  <input type="hidden" name="tag_id" value="<%= result.id %>" phx-value_tag_id="<%= result.id %>">
+              <% else %>
+                <div class="flex flex-row items-center bg-white text-pink-900 border border-gray-400 font-semibold mr-2 mb-2 rounded hover:bg-red-500 hover:text-white hover:border-white cursor-pointer"
+                  title="Follow <%= result.name %>">
+                  <form phx-submit="follow_tag"
+                    title="Follow <%= result.name %>"
+                    class="flex flex-row flex-wrap items-center cursor-pointer">
+                    <input type="hidden" name="tag_id" value="<%= result.id %>" phx-value_tag_id="<%= result.id %>">
 
-                  <%= submit class: "plain flex flex-row items-center font-semibold text-md py-2 pl-0 pr-3 focus:bg-red-500 focus:text-white" do %>
-                    <div class="w-4 h-4 rounded rounded-full ml-3" style="background-color: <%= result.color %>;">
-                    </div>
+                    <%= submit class: "plain flex flex-row items-center font-semibold text-md py-1 pl-0 pr-2 focus:bg-red-500 focus:text-white" do %>
+                      <div class="w-3 h-3 rounded rounded-full ml-3" style="background-color: <%= result.color %>;">
+                      </div>
 
-                    <div class="ml-3"><%= result.name %></div>
-                    <div class="w-3 ml-3 mr-1">+</div>
-                  <% end %>
-                </form>
-              </div>
+                      <div class="ml-2"><%= result.name %></div>
+                      <div class="w-3 ml-2 mr-1">+</div>
+                    <% end %>
+                  </form>
+                </div>
+              <% end %>
             <% end %>
           <% end %>
-        <% end %>
+        </div>
       </div>
     </div>
   </div>
@@ -96,7 +137,7 @@
       settings: @settings,
       key: :email_project_recommendations,
       title: "Project Recommendations",
-      description: "Send me a regular email with interesting projects in my favourite languages:" %>
+      description: "Send me a regular email with interesting projects in my favorite languages:" %>
 
     <%= render AdoptopossWeb.SettingsView, "settings_radio_panel.html",
       settings: @settings,
