Change wording and links to explore page on dashboard

--- a/lib/adoptoposs_web/templates/landing_page/contacted.html.eex
+++ b/lib/adoptoposs_web/templates/landing_page/contacted.html.eex
@@ -6,7 +6,7 @@
       You did not contact any maintainer yet.
     </p>
     <%= live_redirect "Explore Projects",
-      to: Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.SearchLive),
+      to: Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.ExploreLive),
       class: "button-link mb-4" %>
     <p>
       Messages you sent will appear here.
