--- a/lib/adoptoposs_web/templates/landing_page/recommendations.html.leex
+++ b/lib/adoptoposs_web/templates/landing_page/recommendations.html.leex
@@ -3,7 +3,7 @@
 <%= if Enum.empty?(@tag_subscriptions) do %>
   <div class="flex flex-col w-full p-8 mt-4 md:mt-8 justify-center items-center text-gray-600 md:text-lg text-center bg-white border border-gray-300 rounded">
     <p class="text-lg md:text-2xl text-gray-600 text-center mb-4 md:mb-8">
-      You don’t follow any programming languages yet.
+      You did not add any favorite languages yet.
     </p>
 
     <%= if Enum.any?(@suggested_tags) do %>
@@ -16,19 +16,18 @@
             <%= render AdoptopossWeb.SharedView, "language_tag.html",
               name: tag.name,
               color: tag.color,
-              class: "p-3 py-1 mr-2 mb-2 border border-gray-400 text-base" %>
+              class: "px-1 py-1 mr-2 mb-2 text-base" %>
         <% end %>
       </div>
     <% end %>
 
-    <%= submit "Follow All",
+    <%= submit "Add these languages",
       class: "button-link mb-4",
       phx_click: "follow_suggested_tags",
       phx_disable_with: "…" %>
 
     <p>
-      Follow your favorite languages in
-      <%= live_redirect "your settings", to: Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.SettingsLive) %>.</br>
+      <%= live_redirect "Add your favorite languages", to: Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.SettingsLive) %> in your settings.</br>
       Related projects will appear here.
     </p>
   </div>
@@ -41,7 +40,7 @@
           <%= render AdoptopossWeb.SharedView, "language_tag.html",
             name: tag.name,
             color: tag.color,
-            class: "p-3 py-1 mr-2 mb-2 border cursor-pointer hover:text-white hover:bg-red-500 hover:border-white #{if tag.id == @tag_filter, do: "text-white bg-red-500 border-white", else: "border-gray-400"}" %>
+            class: "p-3 py-1 mr-2 mb-2 border rounded cursor-pointer hover:text-white hover:bg-red-500 hover:border-white #{if tag.id == @tag_filter, do: "text-white bg-red-500 border-white", else: "border-gray-400"}" %>
         </div>
       <% end %>
     </div>
@@ -78,7 +77,7 @@
     </div>
 
     <div class="text-center mt-6">
-      <%= live_redirect "Explore More…", to: Routes.live_path(@socket, AdoptopossWeb.SearchLive, q: tag_name(@tag_subscriptions, @tag_filter)) %>
+      <%= live_redirect "Explore More…", to: Routes.live_path(@socket, AdoptopossWeb.ExploreLive, f: [@tag_filter]) %>
     </div>
   <% end %>
 <% end %>
