Fix utf8 information characters
because they might not available in some fonts on mobile browsers and macOS

--- a/lib/adoptoposs_web/templates/explore/subscribed_filters.html.leex
+++ b/lib/adoptoposs_web/templates/explore/subscribed_filters.html.leex
@@ -46,7 +46,7 @@
         </p>
       <% else %>
         <p class="mb-0">
-          🛈 You can follow your favorite languages in
+          ℹ You can follow your favorite languages in
           <%= live_redirect "your settings", to: Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.SettingsLive) %>.
           They will appear here as quick filters.
         </p>
