--- a/lib/adoptoposs_web/templates/settings/index.html.leex
+++ b/lib/adoptoposs_web/templates/settings/index.html.leex
@@ -8,7 +8,7 @@
       <div class="flex flex-col flex-wrap">
 
         <p class="">
-          🛈 Programming languages you add here will appear as quick filters on the
+          ℹ Programming languages you add here will appear as quick filters on the
           <%= live_redirect "explore projects page", to: Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.ExploreLive) %>.
           You can also receive email notifications for new projects in these languages.
         </p>
