--- a/lib/adoptoposs_web/templates/settings/index.html.leex
+++ b/lib/adoptoposs_web/templates/settings/index.html.leex
@@ -22,8 +22,8 @@
                 <div class="pl-2" title="<%= tag.name %>">
                   <span class=""><%= tag.name %></span>
 
-                  <form phx-submit="unfollow_tag"
-                    title="Unfollow <%= tag.name %>"
+                  <form phx-submit="remove_tag"
+                    title="Remove <%= tag.name %>"
                     class="inline-block cursor-pointer">
                     <input type="hidden" name="tag_subscription_id" value="<%= tag_subscription.id %>" phx-value_tag_subscription_id="<%= tag_subscription.id %>">
                     <%= submit class: "plain p-1 pr-3" do %>&times;<% end %>
@@ -55,7 +55,7 @@
 
                 <%= submit "Add these languages",
                   class: "button-link",
-                  phx_click: "follow_suggested_tags",
+                  phx_click: "add_suggested_tags",
                   phx_disable_with: "…" %>
               </div>
             <% end %>
@@ -107,9 +107,9 @@
                 </div>
               <% else %>
                 <div class="flex flex-row items-center bg-white text-pink-900 border border-gray-400 font-semibold mr-2 mb-2 rounded hover:bg-red-500 hover:text-white hover:border-white cursor-pointer"
-                  title="Follow <%= result.name %>">
-                  <form phx-submit="follow_tag"
-                    title="Follow <%= result.name %>"
+                  title="Add <%= result.name %>">
+                  <form phx-submit="add_tag"
+                    title="Add <%= result.name %>"
                     class="flex flex-row flex-wrap items-center cursor-pointer">
                     <input type="hidden" name="tag_id" value="<%= result.id %>" phx-value_tag_id="<%= result.id %>">
 
