--- a/lib/adoptoposs_web/templates/project/sharing.html.eex
+++ b/lib/adoptoposs_web/templates/project/sharing.html.eex
@@ -1,5 +1,5 @@
 <details class="toggle">
-  <summary class="toggle-trigger icon-button subtle my-2" title="Share" phx-hook="SharingReset">
+  <summary id="sharing-reset-<%= @project.uuid %>" class="toggle-trigger icon-button subtle my-2" title="Share" phx-hook="SharingReset">
     <svg xmlns:svg="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
       <path d="m 16,13 v 4 c 0,0 -0.9,2 -2,2 H 6 C 4.9,19 4,18.1 4,17 v -4 h 2 v 4 h 8 V 13 Z M 9,4.83 v 9.492034 h 2 V 4.83 L 14.07,7.9 15.49,6.49 10,1 9.3,1.7 4.5,6.5 5.92,7.9 9,4.84 Z"/>
     </svg>
@@ -16,7 +16,7 @@
         class="flex-grow px-2 py-1 rounded border border-gray-300"
         data-copy-target>
 
-      <div class="icon-button subtle ml-3" title="Copy URL" phx-hook="SharingCopy" data-copy-action>
+      <div id="sharing-copy-<%= @project.uuid %>" class="icon-button subtle ml-3" title="Copy URL" phx-hook="SharingCopy" data-copy-action>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="fill-current">
           <path d="M6 6V2c0-1.1.9-2 2-2h10a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-4v4a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V8c0-1.1.9-2 2-2h4zm2 0h4a2 2 0 0 1 2 2v4h4V2H8v4zM2 8v10h10V8H2z"/>
         </svg>
