--- a/lib/adoptoposs_web/templates/project/index.html.leex
+++ b/lib/adoptoposs_web/templates/project/index.html.leex
@@ -103,11 +103,11 @@
                           </svg>
                         </span>
                         <span class="ml-2 text-md font-medium">
-                          <%= Enum.count(project.interests) %>
+                          0
                         </span>
                       </div>
                     <% else %>
-                      <%= live_redirect to: Routes.live_path(@socket, AdoptopossWeb.ProjectLive.Show, project.id), class: "flex flex-row items-center emphasize", title: "#{Enum.count(project.interests)} people contacted you" do %>
+                      <%= live_redirect to: Routes.live_path(@socket, AdoptopossWeb.MessagesLive.Interests) <> "/#p-#{project.uuid}", class: "flex flex-row items-center emphasize", title: "#{Enum.count(project.interests)} people contacted you" do %>
                         <span>
                           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="fill-current h-6 w-6">
                             <path d="M18 2a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4c0-1.1.9-2 2-2h16zm-4.37 9.1L20 16v-2l-5.12-3.9L20 6V4l-10 8L0 4v2l5.12 4.1L0 14v2l6.37-4.9L10 14l3.63-2.9z"/>
