--- a/lib/adoptoposs_web/templates/shared/navigation_logged_in.html.eex
+++ b/lib/adoptoposs_web/templates/shared/navigation_logged_in.html.eex
@@ -1,7 +1,8 @@
+<!-- hidden on mobile -->
 <div class="md:hidden inline-block">
   <%= live_redirect "Submit Repo",
     to: Routes.live_path(@conn, AdoptopossWeb.RepoLive, @current_user.username),
-    class: "self-center text-md px-4 py-2 leading-none border border-red-300 rounded" %>
+    class: "self-center text-md px-4 py-2 leading-none border border-red-300 rounded font-semibold" %>
 </div>
 
 <details class="toggle close-on-link-clicked block md:hidden self-end">
@@ -13,14 +14,35 @@
   </summary>
 
   <div class="toggle-content absolute left-0 right-0 bg-gray-100 z-20 shadow-md p-6">
-    <%= live_redirect to: Routes.live_path(@conn, AdoptopossWeb.ExploreLive), class: "flex items-center p-2 mr-4" do %>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="inline h-4 w-4 fill-current sm:mr-2">
-        <path d="M12.9 14.32a8 8 0 1 1 1.41-1.41l5.35 5.33-1.42 1.42-5.33-5.34zM8 14A6 6 0 1 0 8 2a6 6 0 0 0 0 12z"/>
-      </svg>
-      <span class="ml-2">Explore</span>
+    <%= live_redirect to: Routes.live_path(@conn, AdoptopossWeb.MessagesLive.Interests), class: "flex items-center p-2 mr-4" do %>
+        <span class="flex relative items-center">
+          <%= if @notification_count > 0 do %>
+            <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512' class="inline w-6 h-6 fill-current mr-2">
+              <title>Messages Unread</title>
+              <path d='M320 96H88a40 40 0 00-40 40v240a40 40 0 0040 40h334.73a40 40 0 0040-40V239' fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' stroke-width='32'/>
+              <path fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' stroke-width='32' d='M112 160l144 112 87-65.67'/>
+              <circle cx='431.95' cy='128.05' r='47.95'/>
+              <path d='M432 192a63.95 63.95 0 1163.95-63.95A64 64 0 01432 192zm0-95.9a32 32 0 1031.95 32 32 32 0 00-31.95-32z'/>
+            </svg>
+          <% else %>
+            <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512' class="inline w-6 h-6 fill-current mr-2">
+              <title>Messages</title>
+              <rect x='48' y='96' width='416' height='320' rx='40' ry='40' fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' stroke-width='32'/>
+              <path fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' stroke-width='32' d='M112 160l144 112 144-112'/>
+            </svg>
+          <% end %>
+        </span>
+        <span class="inline">Messages</span>
     <% end %>
 
-    <%= live_redirect "Your Projects (#{length(@project_interests)})",
+    <%= live_redirect to: Routes.live_path(@conn, AdoptopossWeb.ExploreLive), class: "flex items-center p-2" do %>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="inline h-4 w-4 fill-current mr-4">
+        <path d="M12.9 14.32a8 8 0 1 1 1.41-1.41l5.35 5.33-1.42 1.42-5.33-5.34zM8 14A6 6 0 1 0 8 2a6 6 0 0 0 0 12z"/>
+      </svg>
+      <span class="inline">Explore</span>
+    <% end %>
+
+    <%= live_redirect "Your Projects",
       to: Routes.live_path(@conn, AdoptopossWeb.ProjectLive.Index),
       class: "nav-link" %>
 
@@ -42,38 +64,46 @@
   </div>
 </details>
 
-<div id="mobile-menu" class="hidden w-full text-md md:flex-grow justify-end md:flex md:flex-row md:items-end md:w-auto md:items-center mt-4 md:mt-0">
+<div id="menu" class="hidden w-full text-md md:flex-grow justify-end md:flex md:flex-row md:items-end md:w-auto md:items-center mt-4 md:mt-0">
   <div class="hidden md:inline-flex">
-    <details class="relative toggle close-on-link-clicked">
-      <summary class="text-red-600 toggle-trigger focus:outline-none focus:border focus:border-red-400 hover:text-red-400">
-        <svg class="inline w-4 h-4 fill-current sm:mr-2" enable-background="new 0 0 512 512" height="512" viewBox="0 0 512 512" width="512" xmlns="http://www.w3.org/2000/svg">
-          <path d="m450.201 407.453c-1.505-.977-12.832-8.912-24.174-32.917-20.829-44.082-25.201-106.18-25.201-150.511 0-.193-.004-.384-.011-.576-.227-58.589-35.31-109.095-85.514-131.756v-34.657c0-31.45-25.544-57.036-56.942-57.036h-4.719c-31.398 0-56.942 25.586-56.942 57.036v34.655c-50.372 22.734-85.525 73.498-85.525 132.334 0 44.331-4.372 106.428-25.201 150.511-11.341 24.004-22.668 31.939-24.174 32.917-6.342 2.935-9.469 9.715-8.01 16.586 1.473 6.939 7.959 11.723 15.042 11.723h109.947c.614 42.141 35.008 76.238 77.223 76.238s76.609-34.097 77.223-76.238h109.947c7.082 0 13.569-4.784 15.042-11.723 1.457-6.871-1.669-13.652-8.011-16.586zm-223.502-350.417c0-14.881 12.086-26.987 26.942-26.987h4.719c14.856 0 26.942 12.106 26.942 26.987v24.917c-9.468-1.957-19.269-2.987-29.306-2.987-10.034 0-19.832 1.029-29.296 2.984v-24.914zm29.301 424.915c-25.673 0-46.614-20.617-47.223-46.188h94.445c-.608 25.57-21.549 46.188-47.222 46.188zm60.4-76.239c-.003 0-213.385 0-213.385 0 2.595-4.044 5.236-8.623 7.861-13.798 20.104-39.643 30.298-96.129 30.298-167.889 0-63.417 51.509-115.01 114.821-115.01s114.821 51.593 114.821 115.06c0 .185.003.369.01.553.057 71.472 10.25 127.755 30.298 167.286 2.625 5.176 5.267 9.754 7.861 13.798z"/>
-        </svg>
-      </summary>
-
-      <div class="absolute right-0 left-auto flex flex-col p-2 mt-2 bg-gray-100 border border-red-300 rounded shadow-md toggle-content w-max-content">
-        <%= for interest <- @project_interests do %>
-          <%= live_redirect to: Routes.live_path(@conn, AdoptopossWeb.ProjectLive.Show, interest.project.id),
-            class: "px-4 py-2 text-red-600 hover:text-red-400" do %>
-            <div class="text-center"><%= "#{interest.creator.name} is interested in #{interest.project.name}" %></div>
-            <div class="text-xs text-right"><%= format_relative_time(interest.inserted_at) %></div>
+    <%= live_redirect to: Routes.live_path(@conn, AdoptopossWeb.MessagesLive.Interests), class: "flex items-center p-2 mr-4 font-semibold" do %>
+        <span class="flex relative items-center">
+          <%= if @notification_count > 0 do %>
+            <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512' class="inline w-6 h-6 fill-current mr-2">
+              <title>Messages Unread</title>
+              <path d='M320 96H88a40 40 0 00-40 40v240a40 40 0 0040 40h334.73a40 40 0 0040-40V239' fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' stroke-width='32'/>
+              <path fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' stroke-width='32' d='M112 160l144 112 87-65.67'/>
+              <circle cx='431.95' cy='128.05' r='47.95'/>
+              <path d='M432 192a63.95 63.95 0 1163.95-63.95A64 64 0 01432 192zm0-95.9a32 32 0 1031.95 32 32 32 0 00-31.95-32z'/>
+            </svg>
+          <% else %>
+            <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512' class="inline w-6 h-6 fill-current mr-2">
+              <title>Messages</title>
+              <rect x='48' y='96' width='416' height='320' rx='40' ry='40' fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' stroke-width='32'/>
+              <path fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' stroke-width='32' d='M112 160l144 112 144-112'/>
+            </svg>
           <% end %>
-        <% end %>
-      </div>
-    </details>
-    </div>
+        </span>
+        <span class="inline">
+          Messages
+        </span>
+    <% end %>
+
     <%= live_redirect to: Routes.live_path(@conn, AdoptopossWeb.ExploreLive), class: "flex items-center p-2 mr-4" do %>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="inline h-4 w-4 fill-current sm:mr-2">
-        <path d="M12.9 14.32a8 8 0 1 1 1.41-1.41l5.35 5.33-1.42 1.42-5.33-5.34zM8 14A6 6 0 1 0 8 2a6 6 0 0 0 0 12z"/>
+      <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512' class="inline h-6 w-6 fill-current mr-2">
+        <title>Search</title>
+        <path d='M221.09 64a157.09 157.09 0 10157.09 157.09A157.1 157.1 0 00221.09 64z' fill='none' stroke='currentColor' stroke-miterlimit='10' stroke-width='32'/>
+        <path fill='none' stroke='currentColor' stroke-linecap='round' stroke-miterlimit='10' stroke-width='32' d='M338.29 338.29L448 448'/>
       </svg>
-      <span class="hidden sm:inline">Explore</span>
+      <span class="inline font-semibold">Explore</span>
     <% end %>
 
     <%= live_redirect "Submit Repo",
       to: Routes.live_path(@conn, AdoptopossWeb.RepoLive, @current_user.username),
-      class: "md:flex self-center button-link subtle mr-4" %>
+      class: "flex self-center button-link subtle mr-4" %>
   </div>
 
+  <!-- User account menu -->
   <div class="flex justify-end md:inline-block hidden md:visible">
     <details class="toggle close-on-link-clicked">
       <summary class="toggle-trigger focus:outline-none focus:border focus:border-red-400">
@@ -83,20 +113,20 @@
       </summary>
 
       <div class="relative">
-        <div class="toggle-content absolute right-0 left-auto py-2 mt-2 rounded border border-red-300 bg-gray-100 shadow-md w-max-content">
+        <div class="toggle-content absolute right-0 left-auto py-2 mt-2 rounded border border-red-300 bg-gray-100 shadow-md w-max-content font-semibold">
           <%= live_redirect "Your Projects",
             to: Routes.live_path(@conn, AdoptopossWeb.ProjectLive.Index),
-            class: "block px-4 py-2 text-right" %>
+            class: "block px-8 py-2 text-right" %>
 
           <%= live_redirect "Settings",
             to: Routes.live_path(@conn, AdoptopossWeb.SettingsLive),
-            class: "block px-4 py-2 text-right" %>
+            class: "block px-8 py-2 text-right" %>
 
-          <hr class="border-red-200 mt-2 mb-1">
+          <hr class="border-red-200 border mt-2 mb-1">
 
           <%= link "Log out",
             to: Routes.auth_path(@conn, :delete),
-            class: "block px-4 py-2 text-right" %>
+            class: "block px-8 py-2 text-right" %>
         </div>
       </div>
     </details>
