--- a/lib/adoptoposs_web/templates/shared/navigation_logged_out.html.eex
+++ b/lib/adoptoposs_web/templates/shared/navigation_logged_out.html.eex
@@ -3,7 +3,7 @@
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="inline h-4 w-4 fill-current sm:mr-2">
       <path d="M12.9 14.32a8 8 0 1 1 1.41-1.41l5.35 5.33-1.42 1.42-5.33-5.34zM8 14A6 6 0 1 0 8 2a6 6 0 0 0 0 12z"/>
     </svg>
-    <span class="hidden sm:inline">Explore</span>
+    <span class="hidden sm:inline font-semibold">Explore</span>
   <% end %>
 
   <div class="inline-block">
