--- a/lib/adoptoposs_web/templates/explore/filters.html.leex
+++ b/lib/adoptoposs_web/templates/explore/filters.html.leex
@@ -4,8 +4,8 @@
       <summary class="pl-1 mt-2 text-left text-red-500 hover:text-red-500 border-gray-300 w-full">
         <div class="inline">
           <div class="inline-flex items-center">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="inline-flex fill-current h-3 w-3 mr-1">
-              <path d="M12 12l8-8V0H0v4l8 8v8l4-4v-4z"/>
+            <svg xmlns="http://www.w3.org/2000/svg" class="inline-flex fill-current h-4 w-4 mr-1" viewBox="0 0 512 512">
+              <path d="M296 464a23.88 23.88 0 01-7.55-1.23L208.3 436.1a23.92 23.92 0 01-16.3-22.78V294.11a.44.44 0 00-.09-.13L23.26 97.54A30 30 0 0146.05 48H466a30 30 0 0122.79 49.54L320.09 294a.77.77 0 00-.09.13V440a23.93 23.93 0 01-24 24z"/>
             </svg>
             Set language filters (<%= Enum.count(@filters) %>)
           </div>
@@ -85,8 +85,8 @@
   <% else %>
     <div class="block">
       <h3>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="inline-flex fill-current h-4 w-4 mr-1">
-          <path d="M12 12l8-8V0H0v4l8 8v8l4-4v-4z"/>
+        <svg xmlns="http://www.w3.org/2000/svg" class="inline-flex fill-current h-5 w-5 mr-1" viewBox="0 0 512 512">
+          <path d="M296 464a23.88 23.88 0 01-7.55-1.23L208.3 436.1a23.92 23.92 0 01-16.3-22.78V294.11a.44.44 0 00-.09-.13L23.26 97.54A30 30 0 0146.05 48H466a30 30 0 0122.79 49.54L320.09 294a.77.77 0 00-.09.13V440a23.93 23.93 0 01-24 24z"/>
         </svg>
         Project Filters
       </h3>
