--- a/lib/adoptoposs_web/templates/project/sharing.html.eex
+++ b/lib/adoptoposs_web/templates/project/sharing.html.eex
@@ -1,7 +1,7 @@
 <details class="toggle">
   <summary id="sharing-reset-<%= @project.uuid %>" class="toggle-trigger icon-button subtle my-2" title="Share" phx-hook="SharingReset">
-    <svg xmlns:svg="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-      <path d="m 16,13 v 4 c 0,0 -0.9,2 -2,2 H 6 C 4.9,19 4,18.1 4,17 v -4 h 2 v 4 h 8 V 13 Z M 9,4.83 v 9.492034 h 2 V 4.83 L 14.07,7.9 15.49,6.49 10,1 9.3,1.7 4.5,6.5 5.92,7.9 9,4.84 Z"/>
+    <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'>
+      <path d='M384 336a63.78 63.78 0 00-46.12 19.7l-148-83.27a63.85 63.85 0 000-32.86l148-83.27a63.8 63.8 0 10-15.73-27.87l-148 83.27a64 64 0 100 88.6l148 83.27A64 64 0 10384 336z'/>
     </svg>
   </summary>
 
@@ -17,14 +17,15 @@
         data-copy-target>
 
       <div id="sharing-copy-<%= @project.uuid %>" class="icon-button subtle ml-3" title="Copy URL" phx-hook="SharingCopy" data-copy-action>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="fill-current">
-          <path d="M6 6V2c0-1.1.9-2 2-2h10a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-4v4a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V8c0-1.1.9-2 2-2h4zm2 0h4a2 2 0 0 1 2 2v4h4V2H8v4zM2 8v10h10V8H2z"/>
+        <svg xmlns='http://www.w3.org/2000/svg' class='fill-current' viewBox='0 0 512 512'>
+          <rect x='128' y='128' width='336' height='336' rx='57' ry='57' fill='none' stroke='currentColor' stroke-linejoin='round' stroke-width='32'/>
+          <path d='M383.5 128l.5-24a56.16 56.16 0 00-56-56H112a64.19 64.19 0 00-64 64v216a56.16 56.16 0 0056 56h24' fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' stroke-width='32'/>
         </svg>
       </div>
 
       <div class="icon-button subtle hidden ml-3" title="Copied" data-copy-success>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="text-green-400 fill-current">
-          <path d="M0 11l2-2 5 5L18 3l2 2L7 18z"/>
+        <svg xmlns='http://www.w3.org/2000/svg' class='text-green-400 fill-current' viewBox='0 0 512 512'>
+          <path fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' stroke-width='32' d='M416 128L192 384l-96-96'/>
         </svg>
       </div>
     </div>
