--- a/lib/adoptoposs_web/templates/repo/repo.html.leex
+++ b/lib/adoptoposs_web/templates/repo/repo.html.leex
@@ -13,8 +13,8 @@
             class: "text-gray-600 hover:text-gray-700 hover:underline" %>
         </span>
         <span class="flex items-center justify-center h-12 w-12 md:h-16 md:w-16 my-4 md:mb-2 md:mt-0 rounded rounded-full border text-center text-green-700 bg-green-200">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="h-4 w-4 md:h-5 md:w-5 fill-current">
-            <path d="M0 11l2-2 5 5L18 3l2 2L7 18z"/>
+          <svg xmlns='http://www.w3.org/2000/svg' class='h-5 w-5 md:h-6 md:w-6 fill-current' viewBox='0 0 512 512'>
+            <path fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' stroke-width='32' d='M416 128L192 384l-96-96'/>
           </svg>
         </span>
       <% else %>
