--- a/lib/adoptoposs_web/templates/settings/index.html.leex
+++ b/lib/adoptoposs_web/templates/settings/index.html.leex
@@ -8,7 +8,14 @@
       <div class="flex flex-col flex-wrap">
 
         <p class="">
-          ℹ Programming languages you add here will appear as quick filters on the
+          <svg xmlns="http://www.w3.org/2000/svg" class="inline fill-current w-5 h5" viewBox="0 0 512 512">
+            <title>Additional Information</title>
+            <path d="M248 64C146.39 64 64 146.39 64 248s82.39 184 184 184 184-82.39 184-184S349.61 64 248 64z" fill="none" stroke="currentColor" stroke-miterlimit="10" stroke-width="32"/>
+            <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M220 220h32v116"/>
+            <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-miterlimit="10" stroke-width="32" d="M208 340h88"/>
+            <path d="M248 130a26 26 0 1026 26 26 26 0 00-26-26z"/>
+          </svg>
+          Programming languages you add here will appear as quick filters on the
           <%= live_redirect "explore projects page", to: Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.ExploreLive) %>.
           You can also receive email notifications for new projects in these languages.
         </p>
